feat: ux fixes + configs push + bluetooth stability

--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -55,6 +55,7 @@
   "statusConnected": "Połączono",
   "statusConnecting": "Łączenie...",
   "statusDisconnected": "Rozłączono",
+  "statusReconnecting": "Ponowne łączenie (próba {attempt}/{max})...",
 
 
   "mapRefPrefix": "Ref",
@@ -259,6 +260,8 @@
   "deviceState": "Stan urządzenia",
   "noDeviceState": "Brak stanu urządzenia",
   "connectToViewState": "Połącz się z urządzeniem, aby zobaczyć jego stan",
+  "loadingConfig": "Ładowanie konfiguracji",
+  "pleaseWaitFetchingConfig": "Proszę czekać, pobieranie konfiguracji urządzenia...",
   "protectApp": "Chroń aplikację",
   "setPassword": "Ustaw hasło",
   "enterPassword": "Wprowadź hasło",
@@ -567,5 +570,458 @@
   "connectedToSimulation": "Połączono z Urządzeniem Symulacyjnym",
   "simulationFailed": "Symulacja nieudana: {error}",
   "statusHistory": "Historia Statusu",
-  "sourceNodePrefix": "Źródło: {name}"
+  "sourceNodePrefix": "Źródło: {name}",
+  "me": "JA",
+  "targetLabel": "[Cel]",
+  "sourceLabel": "[Źródło]",
+  "ackLabel": "[Potw]",
+  "traceStreamError": "Błąd w strumieniu śledzenia: {error}",
+  "errorLoadingMessages": "Błąd ładowania wiadomości: {error}",
+  "configSaveError": "Błąd zapisu konfiguracji: {error}",
+  "myNodeNumLabel": "mójNumerWęzła={num}",
+  "nodeNumLabel": "numer={num}",
+  "idLabel": "id={id}",
+  "channelIndexLabel": "indeks={index}",
+  "freeLabel": "wolne={value}",
+  "maxLabel": "maks={value}",
+  "fwLabel": "fw={value}",
+  "hwLabel": "hw={value}",
+  "roleKey": "rola={value}",
+  "wifiLabel": "wifi",
+  "btLabel": "bt",
+  "ethLabel": "eth",
+  "bytesLabel": "{value} bajtów",
+  "fromLabel": "od={value}",
+  "toLabel": "do={value}",
+  "chLabel": "kan={value}",
+  "nonceLabel": "nonce={value}",
+  "nA": "N/D",
+  "secondsSuffix": "{value}s",
+  "myNodeNum": "myNodeNum",
+  "rebootCount": "rebootCount",
+  "minAppVersion": "minAppVersion",
+  "firmwareEdition": "firmwareEdition",
+  "nodedbCount": "nodedbCount",
+  "pioEnv": "pioEnv",
+  "deviceId": "deviceId",
+  "nodeNum": "num",
+  "userLongName": "user.longName",
+  "userShortName": "user.shortName",
+  "positionLat": "position.lat",
+  "positionLon": "position.lon",
+  "lastHeard": "lastHeard",
+  "isFavorite": "isFavorite",
+  "isIgnored": "isIgnored",
+  "isKeyManuallyVerified": "isKeyManuallyVerified",
+  "volt": "volt",
+  "chUtil": "chUtil",
+  "airUtil": "airUtil",
+  "uptime": "uptime",
+  "res": "res",
+  "size": "size",
+  "maxlen": "maxlen",
+  "meshPacketId": "meshPacketId",
+  "firmware": "fw",
+  "hardware": "hw",
+  "wifi": "wifi",
+  "ethernet": "eth",
+  "stateVersion": "stateVer",
+  "canShutdown": "canShutdown",
+  "hasRemoteHw": "hasRemoteHw",
+  "hasPKC": "hasPKC",
+  "excluded": "excluded",
+  "hasFwPlus": "hasFwPlus",
+  "hasNodemod": "hasNodemod",
+  "topic": "topic",
+  "retained": "retained",
+  "text": "text",
+  "dataLength": "dataLen",
+  "fileName": "name",
+  "sizeBytes": "sizeBytes",
+  "message": "message",
+  "replyId": "replyId",
+  "time": "time",
+  "payloadVariant": "payloadVariant",
+  "source": "source",
+  "control": "control",
+  "seq": "seq",
+  "crc16": "crc16",
+  "buffer": "buffer",
+  "from": "from",
+  "to": "to",
+  "rxTime": "rxTime",
+  "rxRssi": "rxRssi",
+  "rxSnr": "rxSnr",
+  "wantAck": "wantAck",
+  "priority": "priority",
+  "transport": "transport",
+  "hopStart": "hopStart",
+  "encrypted": "encrypted",
+  "pkiEncrypted": "pkiEncrypted",
+  "nextHop": "nextHop",
+  "relayNode": "relayNode",
+  "txAfter": "txAfter",
+  "latI": "latI",
+  "lonI": "lonI",
+  "altitude": "alt",
+  "gpsAccuracy": "gpsAcc",
+  "sats": "sats",
+  "locationSource": "locSource",
+  "altitudeSource": "altSource",
+  "tsMillisAdj": "tsMillisAdj",
+  "altHae": "altHae",
+  "altGeoSep": "altGeoSep",
+  "pDOP": "pDOP",
+  "hDOP": "hDOP",
+  "vDOP": "vDOP",
+  "groundSpeed": "groundSpeed",
+  "groundTrack": "groundTrack",
+  "fixQuality": "fixQuality",
+  "fixType": "fixType",
+  "sensorId": "sensorId",
+  "nextUpdate": "nextUpdate",
+  "seqNumber": "seqNumber",
+  "precisionBits": "precisionBits",
+  "expire": "expire",
+  "lockedTo": "lockedTo",
+  "description": "desc",
+  "icon": "icon",
+  "mac": "mac",
+  "isLicensed": "isLicensed",
+  "isUnmessagable": "isUnmessagable",
+  "variant": "variant",
+  "errorReason": "errorReason",
+  "requestId": "requestId",
+  "type": "type",
+  "gpioMask": "gpioMask",
+  "gpioValue": "gpioValue",
+  "nodeId": "nodeId",
+  "lastSentById": "lastSentById",
+  "nodeBroadcastIntervalSecs": "nodeBroadcastIntervalSecs",
+  "lastRxTime": "lastRxTime",
+  "broadcastIntSecs": "broadcastIntSecs",
+  "routeLen": "routeLen",
+  "snrTowards": "snrTowards",
+  "routeBackLen": "routeBackLen",
+  "snrBack": "snrBack",
+  "nonce": "nonce",
+  "hash1": "hash1",
+  "hash2": "hash2",
+  "port": "port",
+  "bytes": "bytes",
+  "relativeHumidity": "relativeHumidity",
+  "barometricPressure": "barometricPressure",
+  "gasResistance": "gasResistance",
+  "iaq": "iaq",
+  "lux": "lux",
+  "whiteLux": "whiteLux",
+  "irLux": "irLux",
+  "uvLux": "uvLux",
+  "windDirection": "windDirection",
+  "windSpeed": "windSpeed",
+  "weight": "weight",
+  "windGust": "windGust",
+  "windLull": "windLull",
+  "pm10Standard": "pm10Standard",
+  "pm25Standard": "pm25Standard",
+  "pm100Standard": "pm100Standard",
+  "pm10Environmental": "pm10Environmental",
+  "pm25Environmental": "pm25Environmental",
+  "pm100Environmental": "pm100Environmental",
+  "particles03um": "particles03um",
+  "particles05um": "particles05um",
+  "particles10um": "particles10um",
+  "particles25um": "particles25um",
+  "particles50um": "particles50um",
+  "particles100um": "particles100um",
+  "co2Temperature": "co2Temperature",
+  "co2Humidity": "co2Humidity",
+  "formaldehyde": "formFormaldehyde",
+  "formaldehydeHumidity": "formHumidity",
+  "formaldehydeTemperature": "formTemperature",
+  "pm40Standard": "pm40Standard",
+  "ch1Voltage": "ch1Voltage",
+  "ch1Current": "ch1Current",
+  "ch2Voltage": "ch2Voltage",
+  "ch2Current": "ch2Current",
+  "ch3Voltage": "ch3Voltage",
+  "ch3Current": "ch3Current",
+  "numPacketsTx": "numPacketsTx",
+  "numPacketsRx": "numPacketsRx",
+  "numPacketsRxBad": "numPacketsRxBad",
+  "numOnlineNodes": "numOnlineNodes",
+  "heartBpm": "heartBpm",
+  "spO2": "spO2",
+  "freememBytes": "freememBytes",
+  "diskfree1Bytes": "diskfree1Bytes",
+  "diskfree2Bytes": "diskfree2Bytes",
+  "diskfree3Bytes": "diskfree3Bytes",
+  "load1": "load1",
+  "load5": "load5",
+  "load15": "load15",
+  "userString": "userString",
+  "wifiPsk": "wifiPsk",
+  "ntpServer": "ntpServer",
+  "ethEnabled": "ethEnabled",
+  "addressMode": "addressMode",
+  "rsyslogServer": "rsyslogServer",
+  "enabledProtocols": "enabledProtocols",
+  "ipv6Enabled": "ipv6Enabled",
+  "ip": "ip",
+  "gateway": "gateway",
+  "subnet": "subnet",
+  "dns": "dns",
+  "screenOnSecs": "screenOnSecs",
+  "autoScreenCarouselSecs": "autoScreenCarouselSecs",
+  "compassNorthTop": "compassNorthTop",
+  "flipScreen": "flipScreen",
+  "units": "units",
+  "oled": "oled",
+  "displaymode": "displaymode",
+  "headingBold": "headingBold",
+  "wakeOnTapOrMotion": "wakeOnTapOrMotion",
+  "compassOrientation": "compassOrientation",
+  "use12hClock": "use12hClock",
+  "useLongNodeName": "useLongNodeName",
+  "usePreset": "usePreset",
+  "modemPreset": "modemPreset",
+  "bandwidth": "bandwidth",
+  "spreadFactor": "spreadFactor",
+  "codingRate": "codingRate",
+  "frequencyOffset": "frequencyOffset",
+  "region": "region",
+  "hopLimit": "hopLimit",
+  "txEnabled": "txEnabled",
+  "txPower": "txPower",
+  "channelNum": "channelNum",
+  "overrideDutyCycle": "overrideDutyCycle",
+  "sx126xRxBoostedGain": "sx126xRxBoostedGain",
+  "overrideFrequency": "overrideFrequency",
+  "paFanDisabled": "paFanDisabled",
+  "ignoreIncoming": "ignoreIncoming",
+  "ignoreMqtt": "ignoreMqtt",
+  "configOkToMqtt": "configOkToMqtt",
+  "enabled": "enabled",
+  "mode": "mode",
+  "fixedPin": "fixedPin",
+  "publicKey": "publicKey",
+  "privateKey": "privateKey",
+  "adminKeyCount": "adminKeyCount",
+  "isManaged": "isManaged",
+  "serialEnabled": "serialEnabled",
+  "debugLogApiEnabled": "debugLogApiEnabled",
+  "adminChannelEnabled": "adminChannelEnabled",
+  "sessionKeyRequested": "sessionKeyRequested",
+  "address": "address",
+  "username": "username",
+  "password": "password",
+  "encryptionEnabled": "encryptionEnabled",
+  "jsonEnabled": "jsonEnabled",
+  "tlsEnabled": "tlsEnabled",
+  "root": "root",
+  "proxyToClientEnabled": "proxyToClientEnabled",
+  "mapReportingEnabled": "mapReportingEnabled",
+  "publishIntervalSecs": "publishIntervalSecs",
+  "positionPrecision": "positionPrecision",
+  "shouldReportLocation": "shouldReportLocation",
+  "deviceUpdateInterval": "deviceUpdateInterval",
+  "environmentUpdateInterval": "environmentUpdateInterval",
+  "environmentMeasurementEnabled": "environmentMeasurementEnabled",
+  "environmentScreenEnabled": "environmentScreenEnabled",
+  "environmentDisplayFahrenheit": "environmentDisplayFahrenheit",
+  "airQualityEnabled": "airQualityEnabled",
+  "airQualityInterval": "airQualityInterval",
+  "powerMeasurementEnabled": "powerMeasurementEnabled",
+  "powerUpdateInterval": "powerUpdateInterval",
+  "powerScreenEnabled": "powerScreenEnabled",
+  "healthMeasurementEnabled": "healthMeasurementEnabled",
+  "healthUpdateInterval": "healthUpdateInterval",
+  "healthScreenEnabled": "healthScreenEnabled",
+  "deviceTelemetryEnabled": "deviceTelemetryEnabled",
+  "echo": "echo",
+  "rxd": "rxd",
+  "txd": "txd",
+  "baud": "baud",
+  "timeout": "timeout",
+  "overrideConsoleSerialPort": "overrideConsoleSerialPort",
+  "heartbeat": "heartbeat",
+  "records": "records",
+  "historyReturnMax": "historyReturnMax",
+  "historyReturnWindow": "historyReturnWindow",
+  "isServer": "isServer",
+  "emitControlSignals": "emitControlSignals",
+  "sender": "sender",
+  "save": "save",
+  "clearOnReboot": "clearOnReboot",
+  "outputMs": "outputMs",
+  "output": "output",
+  "active": "active",
+  "alertMessage": "alertMessage",
+  "alertBell": "alertBell",
+  "usePwm": "usePwm",
+  "outputVibra": "outputVibra",
+  "outputBuzzer": "outputBuzzer",
+  "alertMessageVibra": "alertMessageVibra",
+  "alertMessageBuzzer": "alertMessageBuzzer",
+  "alertBellVibra": "alertBellVibra",
+  "alertBellBuzzer": "alertBellBuzzer",
+  "nagTimeout": "nagTimeout",
+  "useI2sAsBuzzer": "useI2sAsBuzzer",
+  "codec2Enabled": "codec2Enabled",
+  "pttPin": "pttPin",
+  "bitrate": "bitrate",
+  "i2sWs": "i2sWs",
+  "i2sSd": "i2sSd",
+  "i2sDin": "i2sDin",
+  "i2sSck": "i2sSck",
+  "updateInterval": "updateInterval",
+  "transmitOverLora": "transmitOverLora",
+  "allowUndefinedPinAccess": "allowUndefinedPinAccess",
+  "availablePinsCount": "availablePinsCount",
+  "gpioPin": "gpioPin",
+  "paxcounterUpdateInterval": "paxcounterUpdateInterval",
+  "wifiThreshold": "wifiThreshold",
+  "bleThreshold": "bleThreshold",
+  "rotary1Enabled": "rotary1Enabled",
+  "inputbrokerPinA": "inputbrokerPinA",
+  "inputbrokerPinB": "inputbrokerPinB",
+  "inputbrokerPinPress": "inputbrokerPinPress",
+  "inputbrokerEventCw": "inputbrokerEventCw",
+  "inputbrokerEventCcw": "inputbrokerEventCcw",
+  "inputbrokerEventPress": "inputbrokerEventPress",
+  "updown1Enabled": "updown1Enabled",
+  "enabledDeprecated": "enabled(deprecated)",
+  "allowInputSource": "allowInputSource",
+  "sendBell": "sendBell",
+  "ledState": "ledState",
+  "current": "current",
+  "red": "red",
+  "green": "green",
+  "blue": "blue",
+  "minimumBroadcastSecs": "minimumBroadcastSecs",
+  "stateBroadcastSecs": "stateBroadcastSecs",
+  "monitorPin": "monitorPin",
+  "detectionTriggerType": "detectionTriggerType",
+  "usePullup": "usePullup",
+  "ttlMinutes": "ttlMinutes",
+  "initialDelayBaseMs": "initialDelayBaseMs",
+  "retryBackoffMs": "retryBackoffMs",
+  "maxTries": "maxTries",
+  "lateFallbackEnabled": "lateFallbackEnabled",
+  "fallbackTailPercent": "fallbackTailPercent",
+  "milestonesEnabled": "milestonesEnabled",
+  "perDestMinSpacingMs": "perDestMinSpacingMs",
+  "maxActiveDm": "maxActiveDm",
+  "probeFwplusNearDeadline": "probeFwplusNearDeadline",
+  "degreeThreshold": "degreeThreshold",
+  "dupThreshold": "dupThreshold",
+  "windowMs": "windowMs",
+  "maxExtraHops": "maxExtraHops",
+  "jitterMs": "jitterMs",
+  "airtimeGuard": "airtimeGuard",
+  "allowedPorts": "allowedPorts",
+  "textStatus": "textStatus",
+  "emoji": "emoji",
+  "snifferEnabled": "snifferEnabled",
+  "doNotSendPrvOverMqtt": "doNotSendPrvOverMqtt",
+  "localStatsOverMeshEnabled": "localStatsOverMeshEnabled",
+  "localStatsExtendedOverMeshEnabled": "localStatsExtendedOverMeshEnabled",
+  "idlegameEnabled": "idlegameEnabled",
+  "additionalChutil": "additionalChutil",
+  "additionalTxutil": "additionalTxutil",
+  "additionalPoliteChannelPercent": "additionalPoliteChannelPercent",
+  "additionalPoliteDutyCyclePercent": "additionalPoliteDutyCyclePercent",
+  "currentTxUtilLimit": "currentTxUtilLimit",
+  "currentMaxChannelUtilPercent": "currentMaxChannelUtilPercent",
+  "currentPoliteChannelUtilPercent": "currentPoliteChannelUtilPercent",
+  "currentPoliteDutyCyclePercent": "currentPoliteDutyCyclePercent",
+  "autoResponderEnabled": "autoResponderEnabled",
+  "autoResponderText": "autoResponderText",
+  "autoRedirectMessages": "autoRedirectMessages",
+  "autoRedirectTargetNodeId": "autoRedirectTargetNodeId",
+  "telemetryLimiterEnabled": "telemetryLimiterEnabled",
+  "telemetryLimiterPacketsPerMinute": "telemetryLimiterPacketsPerMinute",
+  "telemetryLimiterAutoChanutilEnabled": "telemetryLimiterAutoChanutilEnabled",
+  "telemetryLimiterAutoChanutilThreshold": "telemetryLimiterAutoChanutilThreshold",
+  "positionLimiterEnabled": "positionLimiterEnabled",
+  "positionLimiterTimeMinutesThreshold": "positionLimiterTimeMinutesThreshold",
+  "opportunisticFloodingEnabled": "opportunisticFloodingEnabled",
+  "opportunisticBaseDelayMs": "opportunisticBaseDelayMs",
+  "opportunisticHopDelayMs": "opportunisticHopDelayMs",
+  "opportunisticSnrGainMs": "opportunisticSnrGainMs",
+  "opportunisticJitterMs": "opportunisticJitterMs",
+  "opportunisticCancelOnFirstHear": "opportunisticCancelOnFirstHear",
+  "opportunisticAuto": "opportunisticAuto",
+  "version": "version",
+  "screenBrightness": "screenBrightness",
+  "screenTimeout": "screenTimeout",
+  "screenLock": "screenLock",
+  "settingsLock": "settingsLock",
+  "pinCode": "pinCode",
+  "theme": "theme",
+  "alertEnabled": "alertEnabled",
+  "bannerEnabled": "bannerEnabled",
+  "ringToneId": "ringToneId",
+  "language": "language",
+  "compassMode": "compassMode",
+  "screenRgbColor": "screenRgbColor",
+  "isClockfaceAnalog": "isClockfaceAnalog",
+  "gpsFormat": "gpsFormat",
+  "calibrationDataLen": "calibrationDataLen",
+  "filterEnabled": "filterEnabled",
+  "minSnr": "minSnr",
+  "hideIgnoredNodes": "hideIgnoredNodes",
+  "highlightEnabled": "highlightEnabled",
+  "zoom": "zoom",
+  "centerLatI": "centerLatI",
+  "centerLonI": "centerLonI",
+  "followMe": "followMe",
+  "psk": "psk",
+  "uplinkEnabled": "uplinkEnabled",
+  "downlinkEnabled": "downlinkEnabled",
+  
+  "ownerEditTitle": "Edytuj Właściciela",
+  "ownerLongName": "Pełna Nazwa",
+  "ownerShortName": "Krótka Nazwa",
+  "ownerLongNameHint": "np. Jan Kowalski",
+  "ownerShortNameHint": "np. JK",
+  "ownerLongNameHelper": "Pełna nazwa dla tego urządzenia",
+  "ownerShortNameHelper": "Krótka nazwa (maks. 4 znaki)",
+  "ownerEditAtLeastOneName": "Podaj przynajmniej jedną nazwę (długą lub krótką)",
+  "ownerUpdateSuccess": "Informacje o właścicielu zaktualizowane pomyślnie",
+  "ownerUpdateFailed": "Błąd aktualizacji informacji o właścicielu: {error}",
+
+  "configHelpTitle": "Pomoc Konfiguracji",
+  "readMoreDocumentation": "Czytaj więcej w dokumentacji",
+  "editTooltip": "Edytuj",
+
+  "deviceRoleLabel": "Rola",
+  "serialEnabledLabel": "Port Szeregowy Włączony",
+  "serialEnabledSubtitle": "Przestarzałe (upstream)",
+  "buttonGpioLabel": "GPIO Przycisku",
+  "buzzerGpioLabel": "GPIO Brzęczyka",
+  "rebroadcastModeLabel": "Tryb Retransmisji",
+  "nodeInfoBroadcastIntervalLabel": "Interwał Rozgłaszania Info o Węźle (sekundy)",
+  "nodeInfoBroadcastIntervalHint": "Jak często rozgłaszać info o węźle",
+  "doubleTapAsButtonPressLabel": "Podwójne Stuknięcie jako Przycisk",
+  "isManagedLabel": "Zarządzany",
+  "disableTripleClickLabel": "Wyłącz Potrójne Kliknięcie",
+  "timezoneDefinitionLabel": "Definicja Strefy Czasowej",
+  "timezoneDefinitionHint": "np. CET-1CEST,M3.5.0,M10.5.0/3",
+  "ledHeartbeatDisabledLabel": "Dioda Heartbeat Wyłączona",
+  "buzzerModeLabel": "Tryb Brzęczyka",
+
+  "positionBroadcastIntervalLabel": "Interwał Rozgłaszania Pozycji (sekundy)",
+  "smartPositionBroadcastLabel": "Inteligentne Rozgłaszanie Pozycji",
+  "fixedPositionLabel": "Stała Pozycja",
+  "gpsEnabledLabel": "GPS Włączony",
+  "gpsUpdateIntervalLabel": "Interwał Aktualizacji GPS (sekundy)",
+  "gpsAttemptTimeLabel": "Czas Próby GPS (sekundy)",
+  "positionFlagsLabel": "Flagi Pozycji",
+  "rxGpioLabel": "RX GPIO",
+  "txGpioLabel": "TX GPIO",
+  "smartBroadcastMinDistanceLabel": "Min. Dystans Smart Rozgłaszania",
+  "smartBroadcastMinIntervalLabel": "Min. Interwał Smart Rozgłaszania (sekundy)",
+  "gpsEnableGpioLabel": "GPIO Włączenia GPS",
+  "gpsModeLabel": "Tryb GPS"
 }
